Fixed words and a small bug
Fixed typos in words
fixed a bug where the card would get really small and also the progress bar would be cut off without being able to scroll up to it.
Now the card has a kinda fixed height, so it should always be larger than the action buttons

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
   background: var(--bg-color);
 }
@@ -34,7 +34,7 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 25%;
+  min-height: 25%;
   word-wrap: break-word;
   hyphens: auto;
   perspective: 1000px;
